kubernetes/online/nginx/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: online
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
          items:
          - key: default.conf
            path: default.conf
          defaultMode: 0600
      containers:
      - name: nginx
        image: nginx
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: online
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nginx
  type: ClusterIP
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: nginx-deny-egress
#   namespace: online
# spec:
#   podSelector:
#     matchLabels:
#       app: nginx
#   policyTypes:
#   - Egress
#   egress: []
# ---

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: online
  labels:
    expose: "online"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`cloud.basraven.nl`)
    kind: Rule
    services:
    - name: nginx
      port: 80
  tls:
    certResolver: default
